# multi-agent-system

./: .gitignore  pyproject.toml
my-agents/document_translator_with_readability/: .gitignore  README.md  agent_translator.py  novita_agent_translator.py  poor_sample.txt  poor_sample_English.txt  poor_sample_English_2025_04_21.txt  poor_sample_English_2025_04_22.txt  poor_sample_English_metadata.json  pyproject.toml  sample.txt  sample_English.txt  sample_English_metadata.json  sample_Spanish.txt  sample_Spanish_2025_04_22.txt  sample_Spanish_metadata.json  sample_spanish_out.txt  sample_spanish_out_metadata.json  simple_translator.py  translation_workflow  workflow_diagram.txt
my-agents/game designer/: agent_factories.py  main.py  manager.py  requirements.txt  state_manager.py
my-agents/linkedin_posts/: README.md  buffer_integration.py  main.py  manager.py
my-agents/linkedin_posts/personas/examples/: data_scientist.txt  startup_founder.txt  tech_leader.txt
